--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 </head>
 
 <body>
+    <!-- header -->
     <header>
-        <!-- header -->
         <div class="center clearFix">
             <h1 class="logo"><a href="#"><img src="imgs/logo.svg" alt=""></a></h1>
             <div class="mBtn">
@@ -238,10 +238,10 @@
                         </a></li>
                 </ul>
                 
-                <div class="scrollBox">
+                <!-- <div class="scrollBox">
                 inp
                 <div class="scroll">a1</div>
-                 </div>
+                 </div> -->
         </section>
         <!-- main banner -->
         <section id="banner">
